--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         min-height: 100vh;
         margin-top: 0px;
       }
+      /* 商品名称只展示两行 */
+      .text-show {
+        display: -webkit-box;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
     </style>
     <script>
       window.scrollTo({
